--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Product/Create.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Product/Create.cshtml
@@ -32,11 +32,12 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ImageName" class="control-label"></label>
-                <input asp-for="ImageName" class="form-control" />
-                <span asp-validation-for="ImageName" class="text-danger"></span>
+            <div class="form-group mt-2 mb-2">
+                <label>Ucitaj sliku</label>
+                <input type="file" name="Image" class="form-control" />
             </div>
+
+            <partial name="~/Areas/Admin/Views/Shared/_SelectCategoryPartial.cshtml" />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
