--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Product/Create.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Product/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data"> 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group mt-2 mb-2">
                 <label>Ucitaj sliku</label>
-                <input type="file" name="Image" class="form-control" />
+                <input type="file" name="picture" class="form-control" />
             </div>
 
             <partial name="~/Areas/Admin/Views/Shared/_SelectCategoryPartial.cshtml" />
