--- a/Algebra_Seminar_Drdic/Views/Home/Index.cshtml
+++ b/Algebra_Seminar_Drdic/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Dada-Panel</h1>
+    <p>See more on <a href="https://www.instagram.com/sandipanel/?hl=hr">our official Instagram page!</a>.</p>
 </div>
