--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Product/Create.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Product/Create.cshtml
@@ -3,8 +3,16 @@
 @{
     ViewData["Title"] = "Create";
 }
+<br />
 
 <h1>Create</h1>
+
+@if(TempData["AlertMessageF"] != null)
+{
+    <div class="alert alert-warning">
+        <strong>Upozorenje!</strong> @TempData["AlertMessageF"]
+    </div>
+}
 
 <h4>Product</h4>
 <hr />
@@ -36,7 +44,6 @@
                 <label>Ucitaj sliku</label>
                 <input type="file" name="picture" class="form-control" />
             </div>
-
             <partial name="~/Areas/Admin/Views/Shared/_SelectCategoryPartial.cshtml" />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
