--- a/Algebra_Seminar_Drdic/Views/Home/Index.cshtml
+++ b/Algebra_Seminar_Drdic/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Dada-Panel</h1>
-    <p>See more on <a href="https://www.instagram.com/sandipanel/?hl=hr">our official Instagram page!</a>.</p>
+    <p>See more on <a href="https://www.instagram.com/sandipanel/?hl=hr">our official Instagram page!</a></p>
 </div>
