--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Product/Delete.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Product/Delete.cshtml
@@ -6,6 +6,13 @@
 
 <h1>Delete</h1>
 
+@if (TempData["AlertMessageF"] != null)
+{
+    <div class="alert alert-warning">
+        <strong>Upozorenje!</strong> @TempData["AlertMessageD"]
+    </div>
+}
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Product</h4>
@@ -35,12 +42,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageName)
-        </dd>
+      <div class="row">
+          <div class="col">
+              <dt class = "col-sm-2">Category</dt>
+              @foreach(var items in ViewBag.CategoriesDelete)
+                {
+                    <dt class ="col-sm-2"></dt>
+                    <dd class ="col-sm-10">@items</dd>
+                }
+            </div>
+      </div>
+        
     </dl>
     
     <form asp-action="Delete">
