--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Product/Edit.cshtml
@@ -7,11 +7,18 @@
 
 <h1>Edit</h1>
 
+@if(TempData["AlertMessageF"] != null)
+{
+    <div class="alert alert-warning">
+        <strong>Upozorenje!</strong> @TempData["AlertMessageF"]
+    </div>
+}
+
 <h4>Product</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype ="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -36,8 +43,9 @@
             </div>
             <div class="form-group mt-2 mb-2">
                 <label>Ucitaj sliku</label>
-                <input type="file" name="picture" class="form-control" />
+                <input type="file" name="picture" class="form-control"/>
             </div>
+            <input type="hidden" asp-for="ImageName" />
             <partial name="~/Areas/Admin/Views/Shared/_SelectCategoryPartial.cshtml" model="ViewBag.SelectedCategories"/>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
