--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Product/Delete.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Product/Delete.cshtml
@@ -30,30 +30,31 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Quantity)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Quantity)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
-      <div class="row">
-          <div class="col">
-              <dt class = "col-sm-2">Category</dt>
-              @foreach(var items in ViewBag.CategoriesDelete)
-                {
-                    <dt class ="col-sm-2"></dt>
-                    <dd class ="col-sm-10">@items</dd>
-                }
-            </div>
-      </div>
-        
+        <dl class="row">
+            <dt class="col-sm-2">Category</dt>
+
+            @foreach (var items in ViewBag.CategoriesDelete)
+            {
+                <dt class="col-sm-2"></dt>
+                <dd class="col-sm-10">
+                    @items
+                </dd>   
+            }
+        </dl>
     </dl>
+    
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
