--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Account/Details.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Account/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Algebra_Seminar_Drdic.Models.HelperUser
+﻿@model Algebra_Seminar_Drdic.Models.ApplicationUser
 
 @{
     ViewData["Title"] = "Details";
@@ -34,27 +34,16 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
+        
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Password)
+            User role
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Password)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ConfirmPassword)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ConfirmPassword)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Role)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Role)
+        <dd>
+            @ViewBag.UserRole
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
