--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Account/Index.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Algebra_Seminar_Drdic.Models.HelperUser>
+﻿@model IEnumerable<Algebra_Seminar_Drdic.Models.ApplicationUser>
 
 @{
     ViewData["Title"] = "Index";
@@ -24,15 +24,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Password)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ConfirmPassword)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Role)
-            </th>
+          
             <th></th>
         </tr>
     </thead>
@@ -52,18 +44,9 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Password)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ConfirmPassword)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Role)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
