--- a/Algebra_Seminar_Drdic/Views/Shared/_Layout.cshtml
+++ b/Algebra_Seminar_Drdic/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                           <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Product" asp-action="Index">Products</a>
                         </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Account" asp-action="Index">Account</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
