--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Account/Create.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Account/Create.cshtml
@@ -26,6 +26,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="UserName" class="control-label"></label>
+                <input asp-for="UserName" class="form-control" />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
@@ -48,7 +53,7 @@
            <div class="form-group">
                 <label>Password</label>
                 <input name = "Password" class="form-control" />
-                <small id="emailHelp" class="form-text text-muted">Ponovite lozinku!</small>
+                <small id="emailHelp" class="form-text text-muted"></small>
             </div>
             <div class="form-group">
                 <label>Confirm password</label>
@@ -60,10 +65,10 @@
             <div class="col-md-4 mb-3">
                 <label>Roles</label>f
                 <select class="form-control" name="roleName" >
-                    <option value ="">-- Select country --</option>    
+                    <option value ="">-- role --</option>    
                     @foreach(var role in ViewBag.Roles)
                     {
-                        <option value="@role.Value">@role.Text</option>
+                        <option value="@role">@role</option>
                     }
 
                 </select>
