--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Account/Edit.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Account/Edit.cshtml
@@ -53,8 +53,8 @@
             </div>
             <div class="form-group">
                 <label>Password</label>
-                <input type="Password" class="form-control"
-                <small id="emailHelp" class="form-text text-muted">Ponovite lozinku!</small>
+                <input name="Password" class="form-control"
+                <small id="emailHelp" class="form-text text-muted"></small>
             </div>
            
              <div class="form-group">
@@ -70,7 +70,7 @@
                     <option value ="">-- Select role --</option>    
                     @foreach(var role in @ViewBag.Roles)
                     {
-                        <option value="@role.">@role.</option>
+                        <option value="@role">@role</option>
                     }
 
                 </select>
