--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -25,11 +25,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Product">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Product" asp-action="Index">Products</a>
+                            <partial name="_AdminMenuPartial"/>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
