--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Account/Edit.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Account/Edit.cshtml
@@ -62,11 +62,19 @@
             <div class="col-md-4 mb-3">
                 <label>Roles</label>
                 <select class="form-control" name="roleName" >
-                    <option value ="">-- Select role --</option>    
+                       
                     @foreach(var role in @ViewBag.Roles)
                     {
-                        <option value="@role">@role</option>
+                        if(role.Name == @ViewBag.UserRole)
+                        {
+                            <option value="@role.Name" selected>@role.Name</option>
+                        }
+                        else
+                        {
+                             <option value="@role.Name">@role.Name</option>
+                        }
                     }
+
 
                 </select>
             </div>
