--- a/Algebra_Seminar_Drdic/Views/Home/Details.cshtml
+++ b/Algebra_Seminar_Drdic/Views/Home/Details.cshtml
@@ -10,43 +10,42 @@
     <h4>Product</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Quantity)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Quantity)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
-          <dl class="row">
-            <dt class="col-sm-2">Category</dt>
 
-            @foreach (var items in ViewBag.CategoryDetails)
-            {
-                <dt class="col-sm-2"></dt>
-                <dd class="col-sm-10">
-                     @items
-                </dd>   
-            }
-        </dl>
-    </dl>
+        <dt class="col-sm-2">Category</dt>
+
+        @foreach (var items in ViewBag.CategoryDetails)
+        {
+            <dd class="col-sm-10">
+                @items
+            </dd>
+        }
+
+
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Product">Back to List</a>
 </div>
