Adjusting details before check. Final version.

--- a/Algebra_Seminar_Drdic/Views/Home/Index.cshtml
+++ b/Algebra_Seminar_Drdic/Views/Home/Index.cshtml
@@ -1,8 +1,6 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<div class="text-center">
+    <h1 class="display-4"><b>Welcome to Dada-Panel</b></h1>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to Dada-Panel</h1>
+    
     <p>See more on <a href="https://www.instagram.com/sandipanel/?hl=hr">our official Instagram page!</a></p>
 </div>
