--- a/Algebra_Seminar_Drdic/Views/Home/Product.cshtml
+++ b/Algebra_Seminar_Drdic/Views/Home/Product.cshtml
@@ -14,7 +14,6 @@
                 <select class="form-select" id="floatingSelect" name="categoryId">
                     
                     <option value="">All</option>
-                    
                     @foreach(var category in ViewBag.Categories)
                     { 
                         @if(category.Id == ViewBag.CategoryName)
@@ -26,55 +25,50 @@
                             <option value="@category.Id">@category.Title</option>
                         }
                     }
-                    
-                    
                 </select>
-                   
+
                 <div class="input-group-append">
-                    <button type="submit" class="btn btn-primary">Filter</button>
+                    <button type="submit" class="btn btn-outline-secondary">Filter</button>
                 </div>
             </div>
-           
         </form>
-        
     </div>
 </div>
 
 <div class="row">
     @*Ispis svih proizvoda*@
-    @foreach(var item in Model)
+    @foreach (var item in Model)
     {
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
 
-                    @if(item.ImageName != null)
+                    @if (item.ImageName != null)
                     {
                         <p>
                             <img src="~/pictures/@item.ImageName" style="width:100%; height=250px">
                         </p>
                     }
 
-                <h5 class="card-title">@item.Title</h5>
-                <p class="card-text">@item.Description</p>
+                    <h5 class="card-title">@item.Title</h5>
+                    <p class="card-text">@item.Description</p>
 
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Price</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>@item.Price kn</td>
-                            <td class="text-start"></td>
-                            <a href="@Url.Action("Details","Home", new {Id=@item.Id})"
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Price</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>@item.Price kn</td>
+                                <td class="text-start"></td>
+                                <a href="@Url.Action("Details","Home", new {Id=@item.Id})"
                                class="btn btn-primary btn-sm">Detalji</a>
-                        </tr>
-                    </tbody>
-                </table>
-
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
