--- a/Algebra_Seminar_Drdic/Views/Shared/_Layout.cshtml
+++ b/Algebra_Seminar_Drdic/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Product">Products</a>
                         </li>
                         <li class="nav-item">
+                            <partial name="_CategoriesMainMenuPartial"/>
+                        </li>
+                        <li class="nav-item">
                             <partial name="_AdminMenuPartial"/>
                         </li>
                     </ul>
