--- a/Algebra_Seminar_Drdic/Areas/Admin/Views/Account/Details.cshtml
+++ b/Algebra_Seminar_Drdic/Areas/Admin/Views/Account/Details.cshtml
@@ -38,7 +38,7 @@
         <dt class = "col-sm-2">
             User role
         </dt>
-        <dd>
+        <dd class="col-sm-10">
             @ViewBag.UserRole
         </dd>
     </dl>
